# anomaly_detesction_icme

./: README.md
INP-Former/: INP_Former_Multi_Class.py  README.md  dataset.py  requirements.txt  track1_dataloader.py  utils.py
INP-Former/models/: uad.py  vit_encoder.py
INP-Former/saved_results/INP-Former-Multi-Class_dataset=ICME_Encoder=dinov2reg_vit_base_14_Resize=448_Crop=392_INP_num=6/: log.txt
RT-DETRv4/: README.md  caculate_metric2.py  class_id_map.json  generate_submission_json.py  pyproject.toml  requirements.txt  train.py
RT-DETRv4/configs/rtv4/: rtv4_hgnetv2_s_7classes_anomaly_guided.yml
RT-DETRv4/dinov3/: hubconf.py
RT-DETRv4/engine/data/: dataloader.py
RT-DETRv4/engine/data/dataset/: coco_dataset.py
RT-DETRv4/engine/data/transforms/: container.py  mosaic.py
RT-DETRv4/engine/misc/: dist_utils.py
RT-DETRv4/engine/rtv4/: anomaly_proposals.py  hybrid_encoder.py  rtv4.py
RT-DETRv4/engine/solver/: _solver.py  det_engine.py  det_solver.py
RT-DETRv4/tools/: prepare_oneclass_coco.py
RT-DETRv4/tools/dataset/: filter_yolo_labels.py  reorganize_heatmapscore_by_images.py
RT-DETRv4/tools/inference/: batch_torch_inf.py  repro_test_nms_tuned_local.sh  torch_inf.py
docs/: AUDIT_CHECKLIST.md  REPRODUCTION_NOTES.md  dataset_manifest.json
environment/: ENVIRONMENT.md
scripts/: 01_train_inp_former.sh  02_export_inp_heatmaps.sh  03_train_rtdetrv4s.sh  04_infer_rtdetrv4s.sh
weights/: README.md
