[project]
name = "deimv2-main"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "calflops",
    "faster-coco-eval>=1.6.7",
    "lightning-utilities>=0.15.3",
    "opencv-python>=4.13.0.92",
    "pyyaml",
    "scipy",
    "tensorboard",
    "termcolor>=3.3.0",
    "torch==2.5.1",
    "torchmetrics>=1.9.0",
    "torchvision==0.20.1",
    "transformers",
]
[tool.uv]
index-url = "https://pypi.tuna.tsinghua.edu.cn/simple"
[[tool.uv.index]]
name = "pytorch-cu124"
url = "https://download.pytorch.org/whl/cu124"
explicit = true
[tool.uv.sources]
torch = [{ index = "pytorch-cu124" }]
torchvision = [{ index = "pytorch-cu124" }]
